--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -57,7 +57,7 @@
   position: fixed;
   inset: 0;
   z-index: 9999;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
