--- a/source/stylesheets/modal.css
+++ b/source/stylesheets/modal.css
@@ -20,7 +20,7 @@
   position: fixed;
   inset: 0;
   z-index: 9999;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
