--- a/source/stylesheets/modal.scss
+++ b/source/stylesheets/modal.scss
@@ -25,7 +25,7 @@
     position: fixed;
     inset: 0;
     z-index: 9999;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
