--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -22,6 +22,10 @@ main {
         justify-content: space-between;
     }
 }
+#EditTask input[type="radio"] {
+    width: 28px;
+    height: 16px;
+}
 .number {
     display: inline-block;
     padding: 4px 8px;
