--- a/source/stylesheets/login.css
+++ b/source/stylesheets/login.css
@@ -43,6 +43,10 @@ label {
     box-shadow: 0px 1px 13px rgba(0, 0, 0, 0.18);
     border-radius: 25px;
 }
+.form img {
+    width: 100%;
+    height: 100%;
+}
 .form-right {
     position: relative;
 }
