--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -63,7 +63,7 @@ main {
     }
     .todo-list {
         height: calc(100vh - 40px);
-        overflow: auto;
+        overflow: scroll;
     }
 }
 #doing {
@@ -79,7 +79,7 @@ main {
     }
     .doing-list {
         height: calc(100vh - 40px);
-        overflow: auto;
+        overflow: scroll;
     }
 }
 #done {
@@ -95,7 +95,7 @@ main {
     }
     .done-list {
         height: calc(100vh - 40px);
-        overflow: auto;
+        overflow: scroll;
     }
 }
 #block {
@@ -111,7 +111,7 @@ main {
     }
     .block-list {
         height: calc(100vh - 40px);
-        overflow: auto;
+        overflow: scroll;
     }
 }
 button {
