--- a/source/stylesheets/modal.scss
+++ b/source/stylesheets/modal.scss
@@ -5,11 +5,12 @@
             margin-bottom: 20px;
         }
 
-        input {
+        input[type="text"] {
             padding: 8px;
             width: 100%;
             margin-bottom: 12px;
         }
+
         button {
             padding: 8px;
             width: 100%;
