--- a/source/stylesheets/grid.css
+++ b/source/stylesheets/grid.css
@@ -362,6 +362,16 @@
 }
 @media screen and (min-width: 1240px) {
     .container {
-        width: 1500px;
+        width: 1300px;
+    }
+}
+@media screen and (min-width: 1400px) {
+    .container {
+        width: 1600px;
+    }
+}
+@media screen and (min-width: 1500px) {
+    .container {
+        width: 1800px;
     }
 }
