--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -1,33 +1,44 @@
 .item {
-  border: 1px solid #ccc;
+  margin: 0 8px;
   border-radius: 10px;
   position: relative;
   padding: 16px 100px 16px 20px;
   margin-bottom: 20px;
+  box-shadow: 5px 5px 5px gainsboro, -5px 5px 5px gainsboro;
+  overflow: visible;
 }
 .item .category {
   display: inline-block;
   color: #00afdd;
   text-decoration: underline;
   margin-bottom: 8px;
+  font-size: 16px;
+  font-weight: 700;
 }
 .item .title {
   margin-bottom: 16px;
+  font-size: 16px;
 }
 .item .line-item {
   width: 100%;
   height: 2px;
-  background-color: #ccc;
+  background-color: #dbdbdb;
   margin-bottom: 12px;
 }
 .item .content {
-  color: #ccc;
+  color: #5a5c63;
   font-size: 14px;
   margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  margin-right: -76px;
 }
 .item .time {
-  color: #ccc;
+  display: inline-block;
+  color: #5a5c63;
   font-size: 14px;
+  margin-bottom: 40px;
 }
 .item .icon {
   position: absolute;
@@ -52,19 +63,24 @@
 .modal .modal-content h3 {
   text-align: center;
   margin-bottom: 20px;
+  font-size: 30px;
 }
 .modal .modal-content input[type=text] {
-  padding: 8px;
+  padding: 10px;
   width: 100%;
   margin-bottom: 12px;
+  border-radius: 8px;
+  font-size: 20px;
 }
 .modal .modal-content button {
   padding: 8px;
   width: 100%;
 }
 .modal .modal-content textarea {
-  padding: 8px;
+  padding: 10px;
   width: 100%;
+  border-radius: 8px;
+  font-size: 20px;
 }
 
 .modal {
@@ -116,10 +132,14 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 main {
   margin-top: 20px;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .row {
@@ -128,7 +148,7 @@ main {
 }
 
 .l-3 {
-  padding: 0 12px;
+  padding: 0 6px;
 }
 
 .header .row {
