--- a/source/stylesheets/item.css
+++ b/source/stylesheets/item.css
@@ -1,33 +1,44 @@
 .item {
-  border: 1px solid #ccc;
+  margin: 0 8px;
   border-radius: 10px;
   position: relative;
   padding: 16px 100px 16px 20px;
   margin-bottom: 20px;
+  box-shadow: 5px 5px 5px gainsboro, -5px 5px 5px gainsboro;
+  overflow: visible;
 }
 .item .category {
   display: inline-block;
   color: #00afdd;
   text-decoration: underline;
   margin-bottom: 8px;
+  font-size: 16px;
+  font-weight: 700;
 }
 .item .title {
   margin-bottom: 16px;
+  font-size: 16px;
 }
 .item .line-item {
   width: 100%;
   height: 2px;
-  background-color: #ccc;
+  background-color: #dbdbdb;
   margin-bottom: 12px;
 }
 .item .content {
-  color: #ccc;
+  color: #5a5c63;
   font-size: 14px;
   margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  margin-right: -76px;
 }
 .item .time {
-  color: #ccc;
+  display: inline-block;
+  color: #5a5c63;
   font-size: 14px;
+  margin-bottom: 40px;
 }
 .item .icon {
   position: absolute;
