--- a/source/stylesheets/item.scss
+++ b/source/stylesheets/item.scss
@@ -1,32 +1,44 @@
 .item {
-    border: 1px solid #ccc;
+    margin: 0 8px;
     border-radius: 10px;
     position: relative;
     padding: 16px 100px 16px 20px;
     margin-bottom: 20px;
+
+    box-shadow: 5px 5px 5px gainsboro, -5px 5px 5px gainsboro;
+    overflow: visible;
     .category {
         display: inline-block;
         color: #00afdd;
         text-decoration: underline;
         margin-bottom: 8px;
+        font-size: 16px;
+        font-weight: 700;
     }
     .title {
         margin-bottom: 16px;
+        font-size: 16px;
     }
     .line-item {
         width: 100%;
         height: 2px;
-        background-color: #ccc;
+        background-color: #dbdbdb;
         margin-bottom: 12px;
     }
     .content {
-        color: #ccc;
+        color: #5a5c63;
         font-size: 14px;
         margin-bottom: 20px;
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 500;
+        margin-right: calc(16px + 8px - 100px);
     }
     .time {
-        color: #ccc;
+        display: inline-block;
+        color: #5a5c63;
         font-size: 14px;
+        margin-bottom: 40px;
     }
     .icon {
         position: absolute;
