--- a/source/stylesheets/modal.scss
+++ b/source/stylesheets/modal.scss
@@ -3,12 +3,15 @@
         h3 {
             text-align: center;
             margin-bottom: 20px;
+            font-size: 30px;
         }
 
         input[type="text"] {
-            padding: 8px;
+            padding: 10px;
             width: 100%;
             margin-bottom: 12px;
+            border-radius: 8px;
+            font-size: 20px;
         }
 
         button {
@@ -16,8 +19,10 @@
             width: 100%;
         }
         textarea {
-            padding: 8px;
+            padding: 10px;
             width: 100%;
+            border-radius: 8px;
+            font-size: 20px;
         }
     }
 }
