--- a/source/stylesheets/login.css
+++ b/source/stylesheets/login.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: Inter;
 }
+body {
+    width: 100%;
+}
 main {
     width: 100%;
     height: 100vh;
@@ -12,7 +15,7 @@ main {
 .img-1 {
     position: absolute;
     top: 841px;
-    left: 1030px;
+    right: 20%;
 }
 .img-2 {
     position: absolute;
@@ -34,7 +37,7 @@ label {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 1024px;
+    width: 50%;
     /* Frame 101393 */
 
     /* Auto layout */
@@ -50,12 +53,15 @@ label {
 .form-right {
     position: relative;
 }
+.form-right .row {
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
 .content {
-    width: 278px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 80%;
+    padding: 40px;
+    margin: 0 auto;
 }
 button {
     /* Button */
@@ -68,7 +74,7 @@ button {
     padding: 8px 15px;
     gap: 8px;
 
-    width: 278px;
+    width: 100%;
     height: 38px;
     border: none;
     background: #00a6da;
@@ -137,4 +143,16 @@ input[type="checkbox"] {
 }
 .line-loading.loading::before {
     animation: lineLoading 1s forwards infinite linear; /* Áp dụng animation với tên 'ten-animation', thời gian 2 giây và lặp vô hạn */
+}
+@media (max-width: 768px) {
+    main img {
+        width: 50%;
+        height: auto;
+    }
+    .img-1 {
+        display: none;
+    }
+    .form {
+        width: 80%;
+    }
 }
